--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,1 +1,68 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  font-family: "Oswald", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-login {
+  all: unset;
+  margin-top: 0.8rem;
+  margin-right: 2rem;
+  display: flex;
+  padding: 0px 36px;
+  height: 60px;
+  border: 1px solid var(--light-text, #fff);
+  align-items: center;
+  box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
+  flex-shrink: 0;
+  color: #fff;
+  font-family: Graphik;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25px; /* 147.059% */
+  letter-spacing: 0.2px;
+}
+
+.nav-h1 h1 {
+  color: var(--light-text, #fff);
+  text-align: center;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 88px; /* 110% */
+  letter-spacing: 0.2px;
+}
+
+.nav-h1 p {
+  color: var(--light-text, #FFF);
+  text-align: center;
+  /* Sub Heading */
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+  letter-spacing: 0.2px;
+}
+
+.container {
+  width: 1200px;
+  margin: auto;
+}/*# sourceMappingURL=main.css.map */
