--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -203,6 +203,17 @@ aside {
   letter-spacing: 0.2px;
 }
 
+.aside-p {
+  color: var(--light-text, #FFF);
+  text-align: center;
+  /* Sub Heading */
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+  letter-spacing: 0.2px;
+}
+
 .zohid {
   height: 200px;
   width: 420px;
