--- a/sass/_xondamir.scss
+++ b/sass/_xondamir.scss
@@ -237,3 +237,16 @@ font-weight: 400;
 line-height: 62px; /* 119.231% */
 letter-spacing: 0.2px;
 }
+
+.aside-p{
+  color: var(--light-text, #FFF);
+text-align: center;
+
+/* Sub Heading */
+
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 150% */
+letter-spacing: 0.2px;
+}
