--- a/sass/_xondamir.scss
+++ b/sass/_xondamir.scss
@@ -234,6 +234,7 @@ aside{
 
 .aside-flex {
   display: flex;
+  gap: 33px;
 }
 
 
@@ -277,4 +278,33 @@ background: var(--primary, #4452FE);
 
 /* shadow */
 box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
+}
+
+.aside-img{
+  margin-top: -2.8rem;
+}
+
+.button-aside-2{
+  cursor: pointer;
+  all: unset;
+  display: flex;
+height: 52px;
+padding: 1px 56px;
+align-items: center;
+background: var(--primary, #4452FE);
+margin-top: -2rem; 
+}
+
+// aside
+
+.article-gallery{
+  color: var(--light-text, #FFF);
+
+/* Second Headline */
+text-align: center;
+font-size: 52px;
+font-style: normal;
+font-weight: 400;
+line-height: 62px; /* 119.231% */
+letter-spacing: 0.2px;
 }
