--- a/sass/_xondamir.scss
+++ b/sass/_xondamir.scss
@@ -308,3 +308,25 @@ font-weight: 400;
 line-height: 62px; /* 119.231% */
 letter-spacing: 0.2px;
 }
+
+.article-imgs {
+  display: flex;
+  gap: 33px;
+  justify-content: center;
+ 
+}
+
+.article-imgs  img{
+ border-radius: 5px;
+}
+
+.article-imgs-2{
+  display: flex;
+  gap: 33px;
+  justify-content: center;
+  margin-top: 44px;
+}
+
+.article-imgs-2  img{
+ border-radius: 5px;
+}
