--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -268,6 +268,27 @@ aside {
   letter-spacing: 0.2px;
 }
 
+.article-imgs {
+  display: flex;
+  gap: 33px;
+  justify-content: center;
+}
+
+.article-imgs img {
+  border-radius: 5px;
+}
+
+.article-imgs-2 {
+  display: flex;
+  gap: 33px;
+  justify-content: center;
+  margin-top: 44px;
+}
+
+.article-imgs-2 img {
+  border-radius: 5px;
+}
+
 .zohid {
   height: 200px;
   width: 420px;
