--- a/sass/_xondamir.scss
+++ b/sass/_xondamir.scss
@@ -228,6 +228,8 @@ gap: 10px;
 
 .aside-contact{
   color: var(--light-text, #FFF);
+  display: flex;
+  justify-content: center;
 
 /* Second Headline */
 
