--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -370,6 +370,8 @@ article {
 }
 
 .section-2 {
+  position: relative;
+  top: 230px;
   display: flex;
   width: 1200px;
   height: 370px;
@@ -398,6 +400,30 @@ article {
   font-weight: 400;
   line-height: 62px;
   letter-spacing: 0.2px;
+}
+
+.left-1 button {
+  cursor: pointer;
+  all: unset;
+  display: flex;
+  padding: 10px 30px;
+  align-items: center;
+  background: var(--primary, #4452fe);
+  box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
+  color: var(--light-text, #fff);
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25px; /* 147.059% */
+  letter-spacing: 0.2px;
+  margin-top: -50px;
+}
+
+footer {
+  width: 1579px;
+  height: 437px;
+  padding: 107px, 0px, 107px, 0px;
+  background: #181818;
 }
 
 .container {
